# vault-dump-kv2

./: .gitignore  .pylintrc  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  vault-dump-kv2.py
.github/workflows/: ci.yml
